--- a/src/ListenTogether.Pages/Pages/SongMenuPage.razor
+++ b/src/ListenTogether.Pages/Pages/SongMenuPage.razor
@@ -13,7 +13,7 @@
                   Width="120"
                   Height="120"
                   Class="rounded-lg" />
-        <div class="ml-3 d-flex flex-column">
+        <div class="ml-3">
             <MudText Typo="Typo.h6" Class="mt-1 mb-2">@_songMenu.Name</MudText>
             <MudButton Variant="Variant.Outlined"
                        StartIcon="@Icons.Material.Filled.PlayCircleOutline"
