--- a/src/ListenTogether.Pages/Pages/LoginPage.razor
+++ b/src/ListenTogether.Pages/Pages/LoginPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/login"
-@using ListenTogether.Data;
+@using ListenTogether.Data.Api
 
 @inject NavigationManager NavigationManager
 @inject IDialogService DialogService
