--- a/src/ListenTogether.Pages/Pages/SearchPage.razor
+++ b/src/ListenTogether.Pages/Pages/SearchPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/search"
-@using ListenTogether.Data;
+@using ListenTogether.Data.Api
 
 @inject NavigationManager NavigationManager
 @inject IMusicNetworkService MusicNetworkService
