--- a/src/ListenTogether.Pages/Pages/SettingsPage.razor
+++ b/src/ListenTogether.Pages/Pages/SettingsPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/settings"
-@using ListenTogether.Data;
+@using ListenTogether.Data.Api
 
 @inject IJSRuntime JSRuntime;
 @inject IDialogService DialogService
