--- a/src/ListenTogether.Pages/Shared/EmptyLayout.razor
+++ b/src/ListenTogether.Pages/Shared/EmptyLayout.razor
@@ -41,7 +41,7 @@
                     break;
             }
             await InvokeAsync(StateHasChanged);
-            NativeTheme.SetTheme(_isDarkMode);
+            await NativeTheme.SetThemeAsync(_isDarkMode);
             if (Settings.Environment.General.IsAutoCheckUpdate)
             {
                 await AutoUpgrade.DoAsync(true);
