--- a/src/ListenTogether.Pages/Components/Discover/Discover.razor
+++ b/src/ListenTogether.Pages/Components/Discover/Discover.razor
@@ -1,5 +1,5 @@
 ﻿@using ListenTogether.EasyLog;
-@inject IMusicNetworkService MusicNetworkService
+@inject MusicNetPlatform MusicNetworkService
 @inject NavigationManager NavigationManager
 
 <div class="song-menu-container">
