--- a/src/ListenTogether.Pages/Components/Discover/Tags.razor
+++ b/src/ListenTogether.Pages/Components/Discover/Tags.razor
@@ -1,5 +1,5 @@
 ﻿@using System.Collections.Concurrent;
-@inject IMusicNetworkService _musicNetworkService
+@inject MusicNetPlatform _musicNetworkService
 
 @if (_platformMusicTag == null)
 {
