--- a/src/ListenTogether.Pages/Components/SearchBar.razor
+++ b/src/ListenTogether.Pages/Components/SearchBar.razor
@@ -1,5 +1,5 @@
 ﻿@using ListenTogether.Data;
-@inject IMusicNetworkService MusicNetworkService
+@inject MusicNetPlatform MusicNetworkService
 
 <MudFocusTrap DefaultFocus="DefaultFocus.FirstChild">
     <MudAutocomplete T="string"
