--- a/src/ListenTogether.Pages/Components/SearchLabel.razor
+++ b/src/ListenTogether.Pages/Components/SearchLabel.razor
@@ -1,5 +1,5 @@
 ﻿@inject NavigationManager NavigationManager
-@inject IMusicNetworkService MusicNetworkService
+@inject MusicNetPlatform MusicNetworkService
 
 <MudChip Icon="@Icons.Material.Filled.Search"
          Class="cursor-text"
