--- a/src/ListenTogether.Pages/Pages/AddToMyFavorite.razor
+++ b/src/ListenTogether.Pages/Pages/AddToMyFavorite.razor
@@ -4,7 +4,7 @@
 @inject IMyFavoriteService MyFavoriteService
 @inject IDialogService DialogService
 @inject IMusicService MusicService
-@inject IMusicNetworkService MusicNetworkService
+@inject MusicNetPlatform MusicNetworkService
 
 <Loading IsLoading="_isLoading"></Loading>
 <MudDialog>
