--- a/src/ListenTogether.Pages/Pages/PlayingPage.razor
+++ b/src/ListenTogether.Pages/Pages/PlayingPage.razor
@@ -4,7 +4,7 @@
 @using ListenTogether.EasyLog
 @inject MusicPlayerService _playerService
 @inject IPlaylistService _playlistService
-@inject IMusicNetworkService _musicNetworkService
+@inject MusicNetPlatform _musicNetworkService
 @inject IJSRuntime JSRuntime
 @inject IMusicShare MusicShare
 @inject IDeviceManage DeviceManage
