--- a/src/ListenTogether.Pages/Pages/SearchPage.razor
+++ b/src/ListenTogether.Pages/Pages/SearchPage.razor
@@ -2,7 +2,7 @@
 @using ListenTogether.Data.Api
 
 @inject NavigationManager NavigationManager
-@inject IMusicNetworkService MusicNetworkService
+@inject MusicNetPlatform MusicNetworkService
 @inject ISearchHistoryStorage SearchHistoryStorage
 
 <RouteAnimation>
