--- a/src/ListenTogether.Pages/Pages/SearchResultPage.razor
+++ b/src/ListenTogether.Pages/Pages/SearchResultPage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/search-result/{Keyword}"
 @using ListenTogether.Filters.MusicSearchFilter;
 
-@inject IMusicNetworkService MusicNetworkService
+@inject MusicNetPlatform MusicNetworkService
 @inject IPlaylistService PlaylistService
 @inject ISnackbar Snackbar
 @inject MusicResultService MusicResultService
