--- a/src/ListenTogether.Pages/Pages/SettingsPage.razor
+++ b/src/ListenTogether.Pages/Pages/SettingsPage.razor
@@ -9,7 +9,7 @@
 @inject NavigationManager NavigationManager
 @inject IAppVersion AppVersion
 @inject IAutoUpgrade AutoUpgrade
-@inject IMusicNetworkService MusicNetworkService
+@inject MusicNetPlatform MusicNetworkService
 @inject NetConfig NetConfig
 
 <RouteAnimation>
