--- a/src/ListenTogether.Pages/Shared/MainLayout.razor
+++ b/src/ListenTogether.Pages/Shared/MainLayout.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager NavigationManager
 @inject DesktopMoving DesktopMoving
 @inject IJSRuntime JSRuntime
-@inject IMusicNetworkService MusicNetworkService
+@inject MusicNetPlatform MusicNetworkService
 @inject IAutoUpgrade AutoUpgrade
 @inject INativeTheme NativeTheme
 
