--- a/src/ListenTogether.Pages/_Imports.razor
+++ b/src/ListenTogether.Pages/_Imports.razor
@@ -11,8 +11,9 @@
 @using ListenTogether.Pages.Components.Discover
 @using ListenTogether.Pages.Components.Player
 @using ListenTogether.Pages.Services
-@using ListenTogether.Business.Interfaces
+@using ListenTogether.Data.Interface
 @using ListenTogether.Model
 @using ListenTogether.Model.Enums
 @using Sve.Blazor.InfiniteScroll.Components
-@using Microsoft.JSInterop;   
+@using Microsoft.JSInterop;
+@using ListenTogether.Network;
